--- a/site/public/diario.html
+++ b/site/public/diario.html
@@ -140,19 +140,21 @@
     var card = document.querySelector(".boxMensagem");
     var mensagem = document.getElementById("textoMensagem")
 
-    // criei funcao que seleciona um diario especifico. ela recebe o parametro da posicao do diario que vai ser selecionado e diarios (lista de diarios)
+    // funcao chamada quando uma pagina é selecionada na caixa de paginas antigas. ela preenche o titulo e o conteudo da nova entrada com mais inf da pagina selecionada. 
+    // ela recebe dois parametros, um da posicao da pagina na lista e 'diarios' que é a lista de paginas
     function selecionarDiario(i, diarios) {
         idDiarioSelecionado = diarios[i].idPagina;
         input_tituloDiario.value = diarios[i].Titulo;
         conteudoDiario.value = diarios[i].Conteudo;
 
+
         // exibicao dos botoes
-        document.getElementById('btn_editar').style.display = 'inline-block';
-        document.getElementById('btn_deletar').style.display = 'inline-block';
+        document.getElementById('btn_editar').style.display = 'block';
+        document.getElementById('btn_deletar').style.display = 'block';
         document.getElementById('btn_salvar').style.display = 'none';
     }
 
-    // 
+    // requisicao no back para buscar as paginas que o usuario tem lá no BD.
     function buscarDiarios() {
 
         fetch(`diarios/buscarDiarios/${idDiario}`, {
